--- a/less/index.less
+++ b/less/index.less
@@ -54,6 +54,95 @@ table {
 }
 
 html, body {
-    height: 100%;
+	height: 100%;
+	font-size: 62.5%;
+}
+
+h1 {
+	font-size: 4rem;
+}
+
+h2 {
+	font-size: 2.5rem;
+}
+
+h3 {
+	font-size: 2rem;
+}
+
+// Variables
+
+
+// Mixins
+.test-border() {
+	border: 1px solid red;
+  }
+
+// container
+.container {
+	max-width: 800px;
+	margin: 0 auto;
+	line-height: 1.5;
+	font-size: 1.4rem;
+}
+
+// header
+header {
+	nav {
+		display: flex;
+		justify-content: flex-end;
+		margin: 20px 0;
+
+		a {
+			text-decoration: none;
+			color: black;
+			margin-left: 30px;
+		}
+		
+		a:hover {
+			text-decoration: underline;
+		}
+	}
+}
+
+// top-content
+.top-content {
+	background: lavender;
+	padding: 40px 30px;
+
+	img {
+		width: 250px;
+	}
+
+	.name {
+		border-bottom: 1px solid lightgrey;
+		padding-bottom: 20px;
+		margin-bottom: 20px;
+	}
+
+	.cta {
+		button {
+			margin-top: 10px;
+			color: white;
+			background: gray;
+			padding: 5px 10px;
+			font-size: 1.5rem;
+		}
+	}
+}
+
+// middle-content
+.middle-content {
+	display: flex;
+	justify-content: space-between;
+	margin: 20px 0;
+
+	.listen-up {
+		width: 50%;
+	}
+
+	.stuff-good {
+		width: 50%;
+	}
 }
 
