--- a/css/index.css
+++ b/css/index.css
@@ -193,3 +193,12 @@ header nav a:hover {
 .middle-content .stuff-good {
   width: 50%;
 }
+.middle-content .stuff-good p {
+  border-top: 1px solid lightgrey;
+  border-left: 1px solid lightgrey;
+  border-right: 1px solid lightgrey;
+  padding: 5px 10px;
+}
+.middle-content .stuff-good p:last-child {
+  border-bottom: 1px solid lightgrey;
+}
