--- a/less/index.less
+++ b/less/index.less
@@ -143,6 +143,17 @@ header {
 
 	.stuff-good {
 		width: 50%;
+
+		p {
+			border-top: 1px solid lightgrey;
+			border-left: 1px solid lightgrey;
+			border-right: 1px solid lightgrey;
+			padding: 5px 10px;
+		}
+
+		p:last-child {
+			border-bottom: 1px solid lightgrey;
+		}
 	}
 }
 
