--- a/less/index.less
+++ b/less/index.less
@@ -157,3 +157,52 @@ header {
 	}
 }
 
+// bottom-content
+.bottom-content {
+
+	.work-history {
+		// border-bottom: 1px solid lightgrey;
+	}
+
+	table {
+		width: 100%;
+		margin-top: 5px;
+
+		tr:nth-child(even) {
+			background-color: whitesmoke;
+		}
+
+		tr:first-child {
+			border-bottom: 2px solid lightgrey;
+		}
+
+		tr {
+
+			border-top: 1px solid lightgrey;
+			text-align: left;
+			padding: 50px;
+
+			th {
+				font-weight: 700;
+				padding: 5px;
+			}
+
+			td {
+				padding: 5px;
+			}
+		}
+	}
+	
+}
+
+// footer
+footer {
+	.test-border();
+	text-align: center;
+	font-size: 1.2rem;
+	background: grey;
+	margin-top: 20px;
+	padding: 20px 0;
+	color: white;
+}
+
