--- a/less/index.less
+++ b/less/index.less
@@ -80,10 +80,13 @@ h3 {
 
 // container
 .container {
+	border: 1px solid black;
 	max-width: 800px;
 	margin: 0 auto;
 	line-height: 1.5;
 	font-size: 1.4rem;
+	padding-left: 30px;
+	padding-right: 30px;
 }
 
 // header
@@ -138,11 +141,11 @@ header {
 	margin: 20px 0;
 
 	.listen-up {
-		width: 50%;
+		width: 48.5%;
 	}
 
 	.stuff-good {
-		width: 50%;
+		width: 48.5%;
 
 		p {
 			border-top: 1px solid lightgrey;
@@ -159,10 +162,6 @@ header {
 
 // bottom-content
 .bottom-content {
-
-	.work-history {
-		// border-bottom: 1px solid lightgrey;
-	}
 
 	table {
 		width: 100%;
@@ -192,12 +191,14 @@ header {
 			}
 		}
 	}
-	
+
+	.contact {
+		margin-top: 20px;
+	}
 }
 
 // footer
 footer {
-	.test-border();
 	text-align: center;
 	font-size: 1.2rem;
 	background: grey;
