Added media queries  -  MVP complete

--- a/css/index.css
+++ b/css/index.css
@@ -126,7 +126,6 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
-/* Set every element's box-sizing to border-box */
 * {
   box-sizing: border-box;
 }
@@ -158,10 +157,20 @@ header nav {
   justify-content: flex-end;
   margin: 20px 0;
 }
+@media (max-width: 500px) {
+  header nav {
+    justify-content: space-between;
+  }
+}
 header nav a {
   text-decoration: none;
   color: black;
   margin-left: 30px;
+}
+@media (max-width: 500px) {
+  header nav a {
+    margin-left: 0;
+  }
 }
 header nav a:hover {
   text-decoration: underline;
@@ -172,11 +181,46 @@ header nav a:hover {
 }
 .top-content img {
   width: 250px;
+  height: 100%;
+}
+@media (max-width: 500px) {
+  .top-content .img {
+    display: flex;
+    justify-content: center;
+  }
 }
 .top-content .name {
   border-bottom: 1px solid lightgrey;
   padding-bottom: 20px;
   margin-bottom: 20px;
+}
+@media (max-width: 500px) {
+  .top-content .name {
+    display: none;
+  }
+}
+.top-content .mobile-name {
+  display: none;
+}
+@media (max-width: 500px) {
+  .top-content .mobile-name {
+    display: block;
+    text-align: center;
+    border-bottom: 1px solid lightgrey;
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+  }
+}
+@media (max-width: 500px) {
+  .top-content .cta .cta-button {
+    display: flex;
+    justify-content: center;
+  }
+}
+@media (max-width: 500px) {
+  .top-content .cta p {
+    text-align: center;
+  }
 }
 .top-content .cta button {
   margin-top: 10px;
@@ -185,16 +229,37 @@ header nav a:hover {
   padding: 5px 10px;
   font-size: 1.5rem;
 }
+@media (max-width: 500px) {
+  .top-content .cta button {
+    margin-top: 20px;
+  }
+}
 .middle-content {
   display: flex;
   justify-content: space-between;
   margin: 20px 0;
 }
+@media (max-width: 500px) {
+  .middle-content {
+    display: block;
+  }
+}
 .middle-content .listen-up {
   width: 48.5%;
 }
+@media (max-width: 500px) {
+  .middle-content .listen-up {
+    width: 100%;
+  }
+}
 .middle-content .stuff-good {
   width: 48.5%;
+}
+@media (max-width: 500px) {
+  .middle-content .stuff-good {
+    width: 100%;
+    margin-top: 20px;
+  }
 }
 .middle-content .stuff-good p {
   border-top: 1px solid lightgrey;
