--- a/less/index.less
+++ b/less/index.less
@@ -48,7 +48,23 @@ table {
 	border-spacing: 0;
 }
 
-/* Set every element's box-sizing to border-box */
+
+// ====================== Variables ======================
+@mobile: 500px;
+@tablet: 800px; 
+
+// ======================= Mix Ins =======================
+.test-border() {
+	border: 1px solid red;
+  }
+
+ .box-sizing (@type: border-box) {
+	 -webkit-box-sizing: @type;
+	 -moz-box-sizing: 	 @type;
+	 box-sizing: 		 @type;
+ } 
+
+// =================== General Styles ===================
 * {
     box-sizing: border-box;
 }
@@ -70,14 +86,7 @@ h3 {
 	font-size: 2rem;
 }
 
-// Variables
-
-
-// Mixins
-.test-border() {
-	border: 1px solid red;
-  }
-
+// =================== Custom Styles ===================
 // container
 .container {
 	border: 1px solid black;
@@ -96,12 +105,20 @@ header {
 		justify-content: flex-end;
 		margin: 20px 0;
 
+		@media (max-width: @mobile) {
+			justify-content: space-between;
+		}
+
 		a {
 			text-decoration: none;
 			color: black;
 			margin-left: 30px;
+
+			@media (max-width: @mobile) {
+				margin-left: 0;
+			}
 		}
-		
+
 		a:hover {
 			text-decoration: underline;
 		}
@@ -115,21 +132,62 @@ header {
 
 	img {
 		width: 250px;
+		height: 100%;
+	}
+
+	.img {
+		@media (max-width: @mobile) {
+			display: flex;
+			justify-content: center;
+		}
 	}
 
 	.name {
 		border-bottom: 1px solid lightgrey;
 		padding-bottom: 20px;
 		margin-bottom: 20px;
+
+		@media (max-width: @mobile) {
+			display: none;
+		}
+	}
+
+	.mobile-name {
+		display: none;
+
+		@media (max-width: @mobile) {
+			display: block;
+			text-align: center;
+			border-bottom: 1px solid lightgrey;
+			padding-bottom: 20px;
+			margin-bottom: 20px;
+		}
 	}
 
 	.cta {
+		.cta-button {
+			@media (max-width: @mobile) {
+				display: flex;
+				justify-content: center;
+			}
+		}
+		
+		p {
+			@media (max-width: @mobile) {
+				text-align: center;
+			}
+		}
+
 		button {
 			margin-top: 10px;
 			color: white;
 			background: gray;
 			padding: 5px 10px;
 			font-size: 1.5rem;
+
+			@media (max-width: @mobile) {
+				margin-top: 20px;
+			}
 		}
 	}
 }
@@ -140,12 +198,25 @@ header {
 	justify-content: space-between;
 	margin: 20px 0;
 
+	@media (max-width: 500px) {
+		display: block;
+	}
+
 	.listen-up {
 		width: 48.5%;
+
+		@media (max-width: 500px) {
+			width: 100%
+		}
 	}
 
 	.stuff-good {
 		width: 48.5%;
+
+		@media (max-width: 500px) {
+			width: 100%;
+			margin-top: 20px;
+		}
 
 		p {
 			border-top: 1px solid lightgrey;
